[package]
name = "fire-crypto"
description = "Crypto library providing encryption and signing."
version = "0.2.3"
authors = ["Sören Meier <info@s-me.ch>"]
repository = "https://github.com/fire-lib/fire-crypto"
homepage = "https://fire-lib.com/"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "signature", "cipher"]
categories = ["cryptography"]
resolver = "2"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cipher = ["zeroize", "poly1305", "universal-hash", "chacha20", "x25519-dalek", "generic-array"]
signature = ["ed25519-dalek"]

b64 = ["base64"]
serde = ["_serde"]
hash = ["blake2", "generic-array"]

[dependencies]
#cipher
zeroize = { version = "1.4", optional = true }
poly1305 = { version = "0.7", optional = true }
universal-hash = { version = "0.4", optional = true }
chacha20 = { version = "0.7", features = ["hchacha", "expose-core"], optional = true }
x25519-dalek = { version = "1.1", optional = true }

#signature
ed25519-dalek = { version = "1.0", optional = true }

#hash
blake2 = { version = "0.9", optional = true }

# still needing 0.7 because of https://github.com/dalek-cryptography/x25519-dalek/pull/64
rand = "0.7"

generic-array = { version = "0.14", optional = true }
base64 = { version = "0.13", optional = true }
_serde = { package = "serde", version = "1.0", optional = true }